--- a/app/src/main/res/layout/stats_details_controller.xml
+++ b/app/src/main/res/layout/stats_details_controller.xml
@@ -76,9 +76,12 @@
                             android:id="@+id/chip_stat"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/stat_"
+                            android:text="@string/series_type"
                             android:textColor="?attr/colorOnBackground"
                             app:checkedIconEnabled="false"
+                            app:chipIcon="@drawable/ic_query_stats_24dp"
+                            app:chipIconEnabled="true"
+                            app:chipIconTint="?attr/colorOnBackground"
                             app:chipStrokeColor="?attr/colorSecondary"
                             app:chipStrokeWidth="1dp"
                             app:closeIcon="@drawable/ic_arrow_drop_down_24dp"
@@ -86,13 +89,16 @@
                             app:closeIconTint="?attr/colorOnBackground" />
 
                         <com.google.android.material.chip.Chip
-                            android:id="@+id/chip_serie_type"
+                            android:id="@+id/chip_series_type"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/serie_type"
+                            android:text="@string/series_type"
                             android:textColor="?attr/colorOnBackground"
                             android:visibility="gone"
                             app:checkedIconEnabled="false"
+                            app:chipIcon="@drawable/ic_style_24dp"
+                            app:chipIconEnabled="false"
+                            app:chipIconTint="?attr/colorOnBackground"
                             app:chipStrokeColor="?attr/colorSecondary"
                             app:chipStrokeWidth="1dp"
                             app:closeIcon="@drawable/ic_arrow_drop_down_24dp"
@@ -107,6 +113,9 @@
                             android:text="@string/source"
                             android:textColor="?attr/colorOnBackground"
                             app:checkedIconEnabled="false"
+                            app:chipIcon="@drawable/ic_browse_24dp"
+                            app:chipIconEnabled="false"
+                            app:chipIconTint="?attr/colorOnBackground"
                             app:chipStrokeColor="?attr/colorSecondary"
                             app:chipStrokeWidth="1dp"
                             app:closeIcon="@drawable/ic_arrow_drop_down_24dp"
@@ -120,6 +129,9 @@
                             android:text="@string/status"
                             android:textColor="?attr/colorOnBackground"
                             app:checkedIconEnabled="false"
+                            app:chipIcon="@drawable/ic_progress_clock_24dp"
+                            app:chipIconEnabled="false"
+                            app:chipIconTint="?attr/colorOnBackground"
                             app:chipStrokeColor="?attr/colorSecondary"
                             app:chipStrokeWidth="1dp"
                             app:closeIcon="@drawable/ic_arrow_drop_down_24dp"
@@ -133,6 +145,9 @@
                             android:text="@string/language"
                             android:textColor="?attr/colorOnBackground"
                             app:checkedIconEnabled="false"
+                            app:chipIcon="@drawable/ic_language_24dp"
+                            app:chipIconEnabled="false"
+                            app:chipIconTint="?attr/colorOnBackground"
                             app:chipStrokeColor="?attr/colorSecondary"
                             app:chipStrokeWidth="1dp"
                             app:closeIcon="@drawable/ic_arrow_drop_down_24dp"
@@ -146,6 +161,9 @@
                             android:text="@string/category"
                             android:textColor="?attr/colorOnBackground"
                             app:checkedIconEnabled="false"
+                            app:chipIcon="@drawable/ic_label_outline_24dp"
+                            app:chipIconEnabled="false"
+                            app:chipIconTint="?attr/colorOnBackground"
                             app:chipStrokeColor="?attr/colorSecondary"
                             app:chipStrokeWidth="1dp"
                             app:closeIcon="@drawable/ic_arrow_drop_down_24dp"
@@ -156,9 +174,12 @@
                             android:id="@+id/chip_sort"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/sort_"
+                            android:text="@string/title_count"
                             android:textColor="?attr/colorOnBackground"
                             app:checkedIconEnabled="false"
+                            app:chipIcon="@drawable/ic_sort_24dp"
+                            app:chipIconEnabled="true"
+                            app:chipIconTint="?attr/colorOnBackground"
                             app:chipStrokeColor="?attr/colorSecondary"
                             app:chipStrokeWidth="1dp"
                             app:closeIcon="@drawable/ic_arrow_drop_down_24dp"
