--- a/app/src/main/res/layout/stats_controller.xml
+++ b/app/src/main/res/layout/stats_controller.xml
@@ -11,8 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginStart="@dimen/marginNormal"
+        android:layout_marginEnd="@dimen/marginNormal"
         android:orientation="vertical"
         android:paddingTop="@dimen/marginSmall"
         android:paddingBottom="@dimen/marginSmall">
