--- a/app/src/main/res/layout/source_item.xml
+++ b/app/src/main/res/layout/source_item.xml
@@ -85,7 +85,7 @@
             android:layout_marginEnd="4dp"
             android:letterSpacing="0.0"
             android:minWidth="50dp"
-            android:text="@string/latest"
+            android:text="Sayem"
             android:textAllCaps="false"
             app:layout_constraintEnd_toStartOf="@id/source_pin" />
 
